feat: 🎸 task 7-8-9-10-11
